correction des contrastes selon les normes WCAG

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -5,11 +5,11 @@ body {
   flex-direction: column;
   justify-content: center;
   background-color: #091F43;
-  color: #8687a1;
+  color: #53536A;
 }
 
 header {
-  background-color: #D1515A;
+  background-color: #9D2A31;
   padding: 4%;
   display: flex;
   justify-content: center;
@@ -87,7 +87,7 @@ ul a {
 .button__link {
   background-color: #091F43;
   border-radius: 30px 30px;
-  border-color: #8687a1;
+  border-color: #53536A;
   border-style: solid;
   padding: 3% 5%;
   text-align: center;
@@ -129,8 +129,8 @@ ul a {
 }
 
 .button__nav {
-  background-color: #D1515A;
-  border: #8687a1 1px solid;
+  background-color: #9D2A31;
+  border: #53536A 1px solid;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -218,7 +218,7 @@ input {
   width: 100%;
   border-radius: 30px;
   line-height: 30px;
-  border: #8687a1 1px solid;
+  border: #53536A 1px solid;
   margin: auto;
   padding-left: 2%;
 }
@@ -316,7 +316,7 @@ textarea {
 
 .article__link {
   display: block;
-  color: #D1515A;
+  color: #9D2A31;
 }
 @media (min-width: 768px) {
   .article__link {
@@ -356,19 +356,19 @@ textarea {
 .background__form {
   padding: 20% 10%;
   margin: 10%;
-  border: #dcdce4 1px solid;
+  border: #a1a1b5 1px solid;
   border-radius: 15px 15px;
   background-color: #fff;
-  box-shadow: 5px 5px 10px #8687a1;
+  box-shadow: 5px 5px 10px #53536A;
   display: flex;
   flex-direction: column;
 }
 .background__form--signup, .background__form--login {
   margin: 10%;
-  border: #dcdce4 1px solid;
+  border: #a1a1b5 1px solid;
   border-radius: 15px 15px;
   background-color: #fff;
-  box-shadow: 5px 5px 10px #8687a1;
+  box-shadow: 5px 5px 10px #53536A;
   display: flex;
   flex-direction: column;
   padding: 5% 5%;
@@ -420,7 +420,7 @@ form {
   padding: 1%;
   background-color: #fff;
   border-radius: 5px 5px;
-  border: 2px #8687a1 solid;
+  border: 2px #53536A solid;
 }
 @media (min-width: 1200px) {
   .article {
